# ChineseChess

./: .gitignore  CMakeLists.txt  ChineseChess  README.md
include/: game.h  mcts.h  piece.h
src/: game.cpp  main.cpp  mcts.cpp  piece.cpp
